Mon Jun 16 04:20:40 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Improve the descriptions of the
	  stem_strategy values.  (Reported by "oilap" on #xapian)

Fri Jun 13 07:52:53 GMT 2014  Olly Betts <olly@survex.com>

	* weight/dphweight.cc: Fix some comment typos.

Fri Jun 13 07:47:32 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/dphweight.cc: Optimized DPH code.

Fri Jun 13 01:39:07 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix ordering of "bm25" and "bool" in allegedly
	  sorted list, so that --weight bm25 and --weight bool work.

Thu Jun 12 13:49:19 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/extraweightpostlist.h: Add an assertion that get_sumextra()
	  returns a weight contribution which is <= the upper bound which
	  get_maxextra() returns.

Thu Jun 12 13:30:55 GMT 2014  Olly Betts <olly@survex.com>

	* api/leafpostlist.cc,matcher/synonympostlist.cc: Add assertions that
	  get_sumpart() returns a weight contribution which is <= the upper
	  bound which get_maxpart() returns.

Wed Jun 11 05:34:16 GMT 2014  Olly Betts <olly@survex.com>

	* languages/hungarian.sbl: Fix incorrect Unicode codepoints for
	  o-double-acute and u-double-acute in Hungarian Snowball stemmer.
	  Reported by Tom Lane to snowball-discuss.

Tue Jun 10 10:59:18 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/ineb2weight.cc: Optimized IneB2:
	  Reduced number of calculations in get_sumpart and tightened upper
	  bound.

Tue Jun 10 10:23:09 GMT 2014  Olly Betts <olly@survex.com>

	* weight/ineb2weight.cc: Fix closing brace indentation.

Tue Jun 10 09:58:18 GMT 2014  Olly Betts <olly@survex.com>

	* examples/quest.cc: Rework the weight name lookup to use a table like
	  the other lookups.  Change the weight names not to include "weight".

Tue Jun 10 08:15:18 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* include/xapian/weight.h,weight/ifb2weight.cc: Optimized