@@ -327,19 +327,10 @@ On Fedora, the uuid library can be installed by doing::
 On Mac OS X, if you're using macports you'll want the following:
 
   * file (magic.h in configure)
-  * texlive (pdflatex during build)
-  * texlive-basic (for makeindex in configure)
-  * texlive-latex-extra (latex style)
-
-Alternatively, you can install MacTeX from http://www.tug.org/mactex/ instead
-of texlive, texlive-basic and texlive-latex-extra.
 
 If you're using homebrew you'll want the following::
 
     brew install libmagic pcre
-
-The homebrew texlive package only supports 32 bit systems, so you'll probably
-want to install MacTeX from http://www.tug.org/mactex/ instead.
 
 If you're doing much development work, you'll probably also want the following
 tools installed:
@@ -417,29 +408,21 @@ The documentation tools are:
   process trunk after PL2Weight was added).
 * dot (part of Graphviz.  Doxygen's DOT_MULTI_TARGETS option apparently needs
   ">1.8.10")
-* gs (part of Ghostscript)
-* pdflatex (in texlive-latex-base on Debian/Ubuntu)
-* epstopdf (in texlive-extra-utils on Debian/Ubuntu)
-* makeindex (in texlive-binaries on Debian/Ubuntu, or texlive-base-bin for older releases)
 * help2man
 * rst2html or rst2html.py (in python-docutils on Debian/Ubuntu)
 * pngcrush (optional - used to reduce the size of PNG files in the HTML
   apidocs)
 
-Note that pdflatex, epstopdf, gs, and makeindex must all currently be on your
-path (as specified by the environmental variable PATH), since doxygen will look
-for them there.
-
 For a recent version of Debian or Ubuntu, this command should install all the
 required documentation tools::
 
-    apt-get install doxygen graphviz ghostscript texlive-latex-base texlive-extra-utils texlive-binaries texlive-fonts-extra texlive-fonts-recommended texlive-latex-extra texlive-latex-recommended help2man python-docutils pngcrush
+    apt-get install doxygen graphviz help2man python-docutils pngcrush
 
 On Mac OS X, if you're using homebrew, you'll want the following::
 
     brew install help2man graphviz
 
-If you installed graphviz by using homebrew but got the following error when
+If you installed graphviz by using homebrew but get the following error when
 running the configure script::
 
     configure: error: dot (part of the graphviz package) is required to build documentation
@@ -448,6 +431,43 @@ Suppose you are using graphviz 2.36.0, you can type the following into
 terminal and rerun the configure script::
 
     ln -s /usr/local/Cellar/graphviz/2.36.0/bin/dot /usr/local/bin/dot
+
+PDF versions of docs
+~~~~~~~~~~~~~~~~~~~~
+
+As of 1.3.2, we no longer build PDF versions of the API docs by default, but
+you can build them yourself with::
+
+    make -C docs apidoc.pdf
+
+Additional tools are needed for these:
+
+* gs (part of Ghostscript)
+* pdflatex (in texlive-latex-base on Debian/Ubuntu)
+* epstopdf (in texlive-extra-utils on Debian/Ubuntu)
+* makeindex (in texlive-binaries on Debian/Ubuntu, or texlive-base-bin for older releases)
+
+Note that pdflatex, epstopdf, gs, and makeindex must all currently be on your
+path (as specified by the environmental variable PATH), since doxygen will look
+for them there.
+
+For a recent version of Debian or Ubuntu, this command should install these
+extra tools::
+
+    apt-get install ghostscript texlive-latex-base texlive-extra-utils texlive-binaries texlive-fonts-extra texlive-fonts-recommended texlive-latex-extra texlive-latex-recommended
+
+On Mac OS X, if you're using macports you'll want the following:
+
+  * texlive (pdflatex during build)
+  * texlive-basic (for makeindex in configure)
+  * texlive-latex-extra (latex style)
+
+Alternatively, you can install MacTeX from http://www.tug.org/mactex/ instead
+of texlive, texlive-basic and texlive-latex-extra.
+
+The homebrew texlive package only supports 32 bit systems, so even if you're
+using homebrew, you'll probably want to install MacTeX from
+http://www.tug.org/mactex/ instead.
 
 Autotools versions
 ------------------
